k8s/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: helloworld
  name: helloworld
  namespace: helloworld
spec:
  replicas: 4
  selector:
    matchLabels:
      app: helloworld
  strategy:
    rollingUpdate:
      maxSurge: 25%
      maxUnavailable: 25%
    type: RollingUpdate
  template:
    metadata:
      labels:
        app: helloworld
    spec:
      containers:
        - image: trendev/helloworld
          imagePullPolicy: Always
          name: helloworld
          ports:
            - containerPort: 8080
          livenessProbe:
            httpGet:
              path: /health/live
              port: 8080
            initialDelaySeconds: 30
            periodSeconds: 3
          readinessProbe:
            httpGet:
              path: /health/ready
              port: 8080
            initialDelaySeconds: 30
            periodSeconds: 2
            failureThreshold: 1
          # version 1.16 - alpha
          # startupProbe:
          #   httpGet:
          #     path: /health/live
          #     port: 8080
          #   failureThreshold: 12
          #   periodSeconds: 5
          #   initialDelaySeconds: 20
          resources: {}
