k8s/service.yml
apiVersion: v1
kind: Service
metadata:
  name: hello-world-java
  namespace: hello-world-java
  labels:
    app: hello-world-java
spec:
  type: NodePort
  ports:
  - name: http-listener-1
    port: 8080
  selector:
    app: hello-world-java
