k8s/netpol.yml
kind: NetworkPolicy
apiVersion: networking.k8s.io/v1
metadata:
  name: helloworld-restriction
  namespace: helloworld
spec:
  podSelector: {}
  ingress:
    - ports:
      - port: 8080
      from: []
    - from:
        - podSelector: 
            matchLabels:
              app: helloworld
